# pathfinder

./: CMakeLists.txt
include/: algorithms.h  path_utils.h  pathfinder_app.h
routing/components/include/: edge.h  edge_helper.h  graph.h  node.h  point.h  rect.h
routing/routers/include/: a_star.h  dijkstra.h  hpa_star.h  router.h
routing/tests/: CMakeLists.txt  tests.cpp
source/: pathfinder_app.cpp
ui/components/algorithm_selection/include/: algorithm_selection.h
ui/components/algorithm_selection/source/: algorithm_selection.cpp
ui/components/grid/include/: cell.h  grid.h
ui/components/grid/source/: grid.cpp
ui/components/main_frame/include/: main_frame.h
ui/components/main_frame/source/: main_frame.cpp
ui/components/toolbar/algorithm_selection/source/: algorithm_selection.cpp
ui/components/toolbar/icon_button/include/: icon_button.h
ui/components/toolbar/icon_button/source/: icon_button.cpp
ui/components/toolbar/include/: algorithm_selection.h  grid_creation_dialog.h  toolbar.h
ui/components/toolbar/run_algorithm_button/include/: run_algorithm_button.h
ui/components/toolbar/run_algorithm_button/source/: run_algorithm_button.cpp
ui/components/toolbar/source/: algorithm_selection.cpp  grid_creation_dialog.cpp  toolbar.cpp
ui/include/: path_utils.h  pathfinder_app.h
ui/source/: pathfinder_app.cpp
